<resources xmlns:android="http://schemas.android.com/apk/res/android" >
    <string translatable="false" name="app_name">Ride Share</string>
    <string name="server_client_id" translatable="false">719991187082-m0m8b82ivq5vfjmq1j75oanbes0bo5a6.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">1057208558484503</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1057208558484503</string>
    <string name="facebook_client_token" translatable="false">caed0e2a94bd9a34438a31f5d148ec9f</string>
    <string name="password">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="login">Login</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="wrongPassword">Wrong Password</string>
    <string name="rider_not_found">Passenger not found</string>
    <string name="driver_not_found">Driver not found</string>
    <string name="continue_as_driver">Continue as Driver</string>
    <string name="continue_as_rider">Continue as Passenger</string>
    <string name="register">Register</string>
    <string name="password_match_error">Password are not matched</string>
    <string name="password_format_error_digit"> * Your password must contains at least one digit</string>
    <string name="password_format_error_length"> * Your password length must be greater than 6</string>
    <string name="password_error_message_title">Your Password must contain:</string>
    <string translatable="false" name="ilias">Ilias</string>
    <string name="first_name">First Name</string>
    <string name="password_verify">Password Verify</string>
    <string name="sign_up">Sign Up</string>
    <string name="null_error_editText">You must complete this field</string>
    <string name="title_activity_driver" translatable="false">DriverActivity</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="action_settings">Settings</string>
    <string translatable="false" name="webClientIdGoogleSignIn">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</string>
    <string name="menu_home">Home</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="available_cars">Car</string>
    <string name="personal_data">Personal Data</string>
    <string name="your_routes">Your routes</string>
    <string name="passengers">Passengers</string>
    <string name="active_passengers">Active Passengers:</string>
    <string name="next_step">Next Step</string>
    <string name="set_your_starting_point">Set Your Starting Point</string>
    <string name="set_your_finish_point">Set Your Finish Point</string>
    <string name="next_step_title">Continue to the next Step</string>
    <string name="description">Description</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="choose_date_and_time">Choose Date and Time</string>
    <string name="declare_additional_information">Declare Additional Information</string>
    <string name="end_date">End Date</string>
    <string name="set_your_first_route_date">Set the date of your first routes</string>
    <string name="start_date">Start Date</string>
    <string name="choose_the_days">Choose the Days</string>
    <string name="save_route">Save Route</string>
    <string name="starting_route">Starting Route</string>
    <string name="finish_route">Finish Route</string>
    <string name="cost_per_passenger">Cost per Passenger</string>
    <string name="starts_at">Starts at </string>
    <string name="route_saved_success">The routes saved Successfully</string>
    <string name="every">"Every "</string>
    <string name="delete_route">Delete Route</string>
    <string name="are_you_sure_delete_route">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="per_customer">per Customer</string>
    <string name="until">until</string>
    <string name="one_time_trip_at">One Time Trip at:</string>
    <string name="log_out">Log Out</string>
    <string name="time">Time</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">or</string>
    <string name="save_money_make_friends">\"Save money, make friends\"</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="where_to">Where to?</string>
    <string name="ride_history">Ride History</string>
    <string name="destination">Destination</string>
    <string name="we_found">We found</string>
    <string name="routes">routes</string>
    <string name="route">route</string>
    <string name="android_api_key" translatable="false">AIzaSyDFnzaYAuuQauR3oB7T_g12X6t-kkbTFyI</string>
    <string name="became_a_driver">Became a Driver</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">BirthDay</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="name">Name</string>
    <string name="route_date">Route Date</string>
    <string name="set_your_date">Set your Date</string>
    <string name="set_your_time">Set your Time</string>
    <string name="price">Price</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="no_repeat">No repeat</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="timetable">Timetable</string>
    <string name="same_start_finish_point_error">You can not have the same start and finish point</string>
    <string name="route_search_from">From?</string>
    <string name="at">at?</string>
    <string name="drivers">Drivers</string>
    <string name="filters">Filters</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="after">after</string>
    <string name="same_time">Same time</string>
    <string name="later">later</string>
    <string name="sooner">sooner</string>
    <string name="home">Home</string>
    <string name="repeats">Repeats</string>
    <string name="see_dates_here">See dates here</string>
    <string name="contact_driver">Contact Driver</string>
    <string name="send_request">Send request</string>
    <string name="cancel_request">Cancel request</string>
    <string name="ratings">Ratings</string>
    <string name="car_manufacturer">Car manufacturer</string>
    <string name="car_model">Car Model</string>
    <string name="car_year">Car Year</string>
    <string name="car_plate">Car Plate</string>
    <string name="route_request_success">Your Request was sent successfully</string>
    <string name="you_are_about_to_send_a_ride_request_to_the_driver_are_you_sure">You are about to send a ride request to the driver are you sure?</string>
    <string name="error_format_car_plate">Not acceptable Car Plate</string>
    <string name="e_x">e.x.</string>
    <string name="become_a_driver">Become a Driver</string>
    <string name="save_car">Save Car</string>
    <string name="error_message">Something  happened.. Please try again later</string>
    <string name="classification">Classification</string>
    <string name="ride_capacity">Ride Capacity</string>
    <string name="request_send_full_capacity">This routes is foul of Passengers.\nSearch for new ones</string>
    <string name="new_route">New Route</string>
    <string name="origin">Origin</string>
    <string name="does_the_route_repeat">Does the routes repeat?</string>
    <string name="messages">Messages</string>
    <string name="send">Send</string>
    <string name="seen">Seen</string>
    <string name="first_message_chat">Send first messages …</string>
    <string name="details">Details</string>
    <string name="Routes">Routes</string>
    <string name="mute_messages">Mute Messages</string>
    <string name="leave_chat">Leave Chat</string>
    <string name="active_routes">Active Routes</string>
    <string name="previous_routes">Previous Routes</string>
    <string name="car">Car</string>
    <string name="you_are_driver_now">You are Driver now</string>
    <string name="successfull_edit_car_driver">Your Car edited successfully</string>
    <string name="accepte_request_msg">was accepted your request</string>
    <string name="request_accepted">Request Accepted</string>
    <string name="route_start">Route start</string>
    <string name="route_end">Route End</string>
    <string name="end_date_error_daily">Your last day trip must be at least one day after the beginning</string>
    <string name="end_date_error_week">Your last day trip must be at least one week after the beginning</string>
    <string name="route_name">Route Name</string>
    <string name="maximum_deviation">Maximum Deviation</string>
    <string name="maximum_deviation_info">You must define the number of kilometres that your able to drive extra for your passengers</string>
    <string name="full_name">Full Name</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="reviews">Reviews</string>
    <string name="few_words_about_your_driver">Few words about your driver</string>
    <string name="few_words_about_your_ride">Few words about your ride</string>
    <string name="submit">Submit</string>
    <string name="other_people_reviews">Other people Reviews</string>
    <string name="request">Request</string>
    <string name="is_instrested_for">is interested for</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="delete_driver_account">Delete Driver Account</string>
    <string name="save">Save</string>
    <string name="error_email_format">Email is not Acceptable\n(e.x. email@gmail.com)</string>
    <string name="new_password">New Password</string>
    <string name="error_change_email">You cannot change your Email</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="msg_back_again_exit">Please click BACK again to exit</string>
    <string name="error_invalid_email">The email address is badly formatted</string>
    <string name="error_email_already_in_use">The email address is already in use by another account</string>
    <string name="password_changed_success">Password Changed Successfully</string>
    <string name="complete_review">Thanks for your Review</string>
    <string name="edit_car">Edit Car</string>
    <string name="the_route_will_be_automatically_rescheduled_for_every_day_at_the_time_you_specified">The routes will be automatically rescheduled for every day at the time you specified.</string>
    <string name="delete_passenger">Delete Passenger</string>
    <string name="do_you_want_to_delete_this_passenger_from_your_route">Do you want to delete this Passenger from your Route?</string>
    <string name="do_you_want_to_delete_this_route">Do you want to delete this routes?</string>
    <string name="wrong_date">Unacceptable Date</string>
    <string name="too_old_car">Your car is too old</string>
</resources>