<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/navigation_menu"

        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:fontFamily="@font/trebuc"
            android:title="@string/home"
            android:checked="true"/>
        <item
            android:id="@+id/personalData"
            android:icon="@drawable/ic_personal_card"
            android:fontFamily="@font/trebuc"
            android:title="@string/personal_data"
            android:checked="true"/>
        <item
            android:id="@+id/yourRoutes"
            android:fontFamily="@font/trebuc"
            android:icon="@drawable/ic_route"
            android:checked="true"
            android:title="@string/your_routes"/>
        <item
            android:id="@+id/carDriver"
            android:fontFamily="@font/trebuc"
            android:icon="@drawable/ic_car_driver"
            android:checked="true"
            android:title="@string/car"/>
        <item
            android:id="@+id/logOut"
            android:fontFamily="@font/trebuc"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out"
            android:checked="true"/>
    </group>
</menu>