<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/trebuc"
        android:text="@string/delete_route"
        android:textColor="?colorPrimaryVariant"
        android:textSize="25sp"
        android:layout_marginStart="10dp"/>
    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/trebuc"
        android:text="@string/do_you_want_to_delete_this_route"
        android:textColor="@color/shadow"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingEnd="50dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end">

        <TextView
            android:id="@+id/textViewCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/trebuc"
            android:text="@string/cancel"
            android:textColor="@color/shadow"
            android:textSize="20sp" />

        <android.widget.Button
            android:id="@+id/deleteRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_decline"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/sliderRed"
            android:textSize="18sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
</LinearLayout>