<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".driver.fragments.Route.DriverSaveRouteAdditionalInfoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputRouteNameLayout"
            style="@style/TextInputEditTextLoginStyle"
            android:layout_height="wrap_content"
            android:hint="@string/route_name"
            app:startIconDrawable="@drawable/ic_tag_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputRouteName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="TouchTargetSizeCheck"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassengersCostLayout"
            style="@style/TextInputEditTextLoginStyle"
            android:layout_height="wrap_content"
            android:hint="@string/cost_per_passenger"
            app:placeholderText="15.5"
            app:startIconDrawable="@drawable/ic_euro">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPassengersCost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputCapacityLayout"
            style="@style/TextInputEditTextLoginStyle"
            android:layout_height="wrap_content"
            android:hint="@string/ride_capacity"
            app:placeholderText="4"
            app:startIconDrawable="@drawable/ic_passengers_capacity"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputCapacityDeviation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberSigned"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputMaximumDeviationLayout"
            style="@style/TextInputEditTextLoginStyle"
            android:layout_height="wrap_content"
            android:hint="@string/maximum_deviation"
            app:placeholderText="5"
            app:startIconDrawable="@drawable/ic_kilometer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputMaximumDeviation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:textColor="@color/shadow"
            android:text="@string/maximum_deviation_info"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <Button
            android:id="@+id/buttonSaveRoute"
            style="@style/SubmitButtons"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:stateListAnimator="@null"
            android:text="@string/save_route"
            android:translationZ="2dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputDescriptionLayout" />
    </LinearLayout>

</ScrollView>